# genshin_yuanshen

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  auto.sh  chatwithgpt.py  entrypoint.sh  pyproject.toml
image/: add_text.py
prompts/: system_prompt.txt  user_prompt.txt
resource/: Ajax_阿贾克斯.json  Albedo_阿贝多.json  Alhaitham_艾尔海森.txt  Barbatos_巴巴托斯.json  Kamisato_Ayato_神里绫人.json  Kinich_基尼奇.json  Morax_摩拉克斯.json  Scaramouche_散兵.json  Wriothesley_莱欧斯利.json  Xiao_魈.json  wanye_万叶.json
scripts/: produce_with_gpt.py
scripts/genshin_prompts/: system.txt
text/: chatwithgpt.py
text/genshin_prompts/: system.txt
video/: generate.py
videos/: generate_video.py
voice/: clone.py
xhs/: __init__.py  api_server.py  fetch_cookies.py  liulanqi.py  publish.py  utils.py  xhs.py  xhs_manual.py
