[project]
name = "genshin-yuanshen"
version = "0.1.0"
description = "Genshin Impact AI voice cloning and Xiaohongshu content generator"
authors = [
    {name = "wuxiangping", email = "wuxiangping0313@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["genshin", "ai", "voice-cloning", "content-generation", "xiaohongshu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "moviepy>=1.0.3",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/wuxiangping/genshin-yuanshen"
Repository = "https://github.com/wuxiangping/genshin-yuanshen"
Issues = "https://github.com/wuxiangping/genshin-yuanshen/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "image*", "voice*", "video*", "xhs*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]